Kubernetes/M/EKS-Ingress/kubernetes-ingress-master/deployments/mavenapp-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenwebappdeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mavenwebapp
  template:
    metadata:
      name: mavenwebapppod
      labels:
        app: mavenwebapp
    spec:
      containers:
      - name: mavenwebappcontainer
        image: prashhantss/maven-web-application:1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 150m
            memory: 256Mi 
          limits:
            cpu: 200m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebappsvc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mavenwebapp
