Kubernetes/M/EKS-Ingress/kubernetes-ingress-master/deployments/pathbased-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name1
spec:
  rules:
  - host: prashhantss.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springappsvc
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/java-web-app"
        backend:
          service:
            name: javawebappsvc
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/maven-web-application"
        backend:
          service:
            name: mavenwebappsvc
            port:
              number: 80
